fix: reset style is off center in production, but not development

--- a/style.scss
+++ b/style.scss
@@ -186,12 +186,12 @@
 
 .btn-container {
   width: 100%;
+  height: 2.5rem;
   text-align: center;
   align-self: center;
-  margin-bottom: 2rem;
 
   .reset-btn {
-    width: 3.5rem;
+    width: 5rem;
     border: none;
     border-radius: 0.2rem;
     color: var(--foreground-color);
